@@ -67,6 +67,8 @@ import software.amazon.awscdk.services.iam.Role;
 import software.amazon.awscdk.services.lambda.Function;
 import software.amazon.awscdk.services.lambda.IFunction;
 import software.amazon.awscdk.services.lambda.Permission;
+import software.amazon.awscdk.services.lambda.eventsources.SqsEventSource;
+import software.amazon.awscdk.services.lambda.eventsources.SqsEventSourceProps;
 import software.amazon.awscdk.services.s3.Bucket;
 import software.amazon.awscdk.services.s3.IBucket;
 import software.amazon.awscdk.services.sns.Topic;
@@ -95,8 +97,12 @@ import static sleeper.cdk.Utils.createLambdaLogGroup;
 import static sleeper.cdk.Utils.shouldDeployPaused;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_AUTO_SCALING_GROUP;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_CLUSTER;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_CREATION_BATCH_DLQ_ARN;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_CREATION_BATCH_DLQ_URL;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_CREATION_BATCH_QUEUE_ARN;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_CREATION_BATCH_QUEUE_URL;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_CREATION_CLOUDWATCH_RULE;
-import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_CREATION_LAMBDA_FUNCTION;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_CREATION_TRIGGER_LAMBDA_FUNCTION;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_DLQ_ARN;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_DLQ_URL;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_QUEUE_ARN;
@@ -125,6 +131,7 @@ import static sleeper.configuration.properties.instance.CompactionProperty.COMPA
 import static sleeper.configuration.properties.instance.CompactionProperty.COMPACTION_TASK_CPU_ARCHITECTURE;
 import static sleeper.configuration.properties.instance.CompactionProperty.COMPACTION_TASK_CREATION_PERIOD_IN_MINUTES;
 import static sleeper.configuration.properties.instance.CompactionProperty.ECR_COMPACTION_REPO;
+import static software.amazon.awscdk.services.lambda.Runtime.JAVA_11;
 
 /**
  * A {@link NestedStack} to deploy the {@link Queue}s, ECS {@link Cluster}s, a {@link FargateTaskDefinition} or
@@ -180,7 +187,7 @@ public class CompactionStack extends NestedStack {
         Queue compactionJobsQueue = sqsQueueForCompactionJobs(topic);
 
         // Lambda to periodically check for compaction jobs that should be created
-        lambdaToFindCompactionJobsThatShouldBeCreated(coreStacks, jarsBucket, jobCreatorJar, compactionJobsQueue);
+        lambdaToCreateCompactionJobsBatchedViaSQS(coreStacks, jarsBucket, jobCreatorJar, compactionJobsQueue);
 
         // ECS cluster for compaction tasks
         ecsClusterForCompactionTasks(coreStacks, jarsBucket, taskCreatorJar, compactionJobsQueue);
@@ -245,35 +252,52 @@ public class CompactionStack extends NestedStack {
         return compactionJobQ;
     }
 
-    private void lambdaToFindCompactionJobsThatShouldBeCreated(CoreStacks coreStacks,
-                                                               IBucket jarsBucket,
-                                                               LambdaCode jobCreatorJar,
-                                                               Queue compactionJobsQueue) {
+    private void lambdaToCreateCompactionJobsBatchedViaSQS(
+            CoreStacks coreStacks, IBucket jarsBucket, LambdaCode jobCreatorJar, Queue compactionJobsQueue) {
 
         // Function to create compaction jobs
         Map<String, String> environmentVariables = Utils.createDefaultEnvironment(instanceProperties);
 
+        String triggerFunctionName = Utils.truncateTo64Characters(String.join("-", "sleeper",
+                instanceProperties.get(ID).toLowerCase(Locale.ROOT), "compaction-job-creation-trigger"));
         String functionName = Utils.truncateTo64Characters(String.join("-", "sleeper",
-                instanceProperties.get(ID).toLowerCase(Locale.ROOT), "compaction-jobs-creator"));
+                instanceProperties.get(ID).toLowerCase(Locale.ROOT), "compaction-job-creation-handler"));
 
-        IFunction handler = jobCreatorJar.buildFunction(this, "CompactionJobsCreator", builder -> builder
-                .functionName(functionName)
-                .description("Scan DynamoDB looking for files that need compacting and create appropriate job specs in DynamoDB")
-                .runtime(software.amazon.awscdk.services.lambda.Runtime.JAVA_11)
-                .memorySize(instanceProperties.getInt(COMPACTION_JOB_CREATION_LAMBDA_MEMORY_IN_MB))
-                .timeout(Duration.seconds(instanceProperties.getInt(COMPACTION_JOB_CREATION_LAMBDA_TIMEOUT_IN_SECONDS)))
-                .handler("sleeper.compaction.job.creation.lambda.CreateCompactionJobsLambda::eventHandler")
+        IFunction triggerFunction = jobCreatorJar.buildFunction(this, "CompactionJobsCreationTrigger", builder -> builder
+                .functionName(triggerFunctionName)
+                .description("Create batches of tables and send requests to create compaction jobs for those batches")
+                .runtime(JAVA_11)
+                .memorySize(256)
+                .timeout(Duration.seconds(30))
+                .handler("sleeper.compaction.job.creation.lambda.CreateCompactionJobsTriggerLambda::handleRequest")
                 .environment(environmentVariables)
                 .reservedConcurrentExecutions(1)
-                .logGroup(createLambdaLogGroup(this, "CompactionJobsCreatorLogGroup", functionName, instanceProperties)));
+                .logGroup(createLambdaLogGroup(this, "CompactionJobsCreationTriggerLogGroup", triggerFunctionName, instanceProperties)));
 
-        // Grant this function permission to read from / write to the DynamoDB table
-        coreStacks.grantCreateCompactionJobs(handler);
-        jarsBucket.grantRead(handler);
-        statusStore.grantWriteJobEvent(handler);
+        IFunction handlerFunction = jobCreatorJar.buildFunction(this, "CompactionJobsCreationHandler", builder -> builder
+                .functionName(functionName)
+                .description("Scan DynamoDB looking for files that need compacting and create appropriate job specs in DynamoDB")
+                .runtime(JAVA_11)
+                .memorySize(instanceProperties.getInt(COMPACTION_JOB_CREATION_LAMBDA_MEMORY_IN_MB))
+                .timeout(Duration.seconds(instanceProperties.getInt(COMPACTION_JOB_CREATION_LAMBDA_TIMEOUT_IN_SECONDS)))
+                .handler("sleeper.compaction.job.creation.lambda.CreateCompactionJobsLambda::handleRequest")
+                .environment(environmentVariables)
+                .logGroup(createLambdaLogGroup(this, "CompactionJobsCreationHandlerLogGroup", functionName, instanceProperties)));
 
-        // Grant this function permission to put messages on the compaction queue
-        compactionJobsQueue.grantSendMessages(handler);
+        // Send messages from the trigger function to the handler function
+        Queue jobCreationQueue = sqsQueueForCompactionJobCreation();
+        handlerFunction.addEventSource(new SqsEventSource(jobCreationQueue,
+                SqsEventSourceProps.builder().batchSize(1).build()));
+
+        // Grant permissions
+        // - Read through tables in trigger, send batches
+        // - Read/write for creating compaction jobs, access to jars bucket for compaction strategies
+        jobCreationQueue.grantSendMessages(triggerFunction);
+        coreStacks.grantReadTablesStatus(triggerFunction);
+        coreStacks.grantCreateCompactionJobs(handlerFunction);
+        jarsBucket.grantRead(handlerFunction);
+        statusStore.grantWriteJobEvent(handlerFunction);
+        compactionJobsQueue.grantSendMessages(handlerFunction);
 
         // Cloudwatch rule to trigger this lambda
         Rule rule = Rule.Builder
@@ -282,16 +306,38 @@ public class CompactionStack extends NestedStack {
                 .description("A rule to periodically trigger the compaction job creation lambda")
                 .enabled(!shouldDeployPaused(this))
                 .schedule(Schedule.rate(Duration.minutes(instanceProperties.getInt(COMPACTION_JOB_CREATION_LAMBDA_PERIOD_IN_MINUTES))))
-                .targets(Collections.singletonList(new LambdaFunction(handler)))
+                .targets(List.of(new LambdaFunction(triggerFunction)))
                 .build();
-        instanceProperties.set(COMPACTION_JOB_CREATION_LAMBDA_FUNCTION, handler.getFunctionName());
+        instanceProperties.set(COMPACTION_JOB_CREATION_TRIGGER_LAMBDA_FUNCTION, triggerFunction.getFunctionName());
         instanceProperties.set(COMPACTION_JOB_CREATION_CLOUDWATCH_RULE, rule.getRuleName());
     }
 
-    private void ecsClusterForCompactionTasks(CoreStacks coreStacks,
-                                              IBucket jarsBucket,
-                                              LambdaCode taskCreatorJar,
-                                              Queue compactionJobsQueue) {
+    private Queue sqsQueueForCompactionJobCreation() {
+        // Create queue for compaction job creation invocation
+        Queue deadLetterQueue = Queue.Builder
+                .create(this, "CompactionJobCreationDLQ")
+                .queueName(Utils.truncateTo64Characters(instanceProperties.get(ID) + "-CompactionJobCreationDLQ"))
+                .build();
+        Queue queue = Queue.Builder
+                .create(this, "CompactionJobCreationQueue")
+                .queueName(Utils.truncateTo64Characters(instanceProperties.get(ID) + "-CompactionJobCreationQ"))
+                .deadLetterQueue(DeadLetterQueue.builder()
+                        .maxReceiveCount(1)
+                        .queue(deadLetterQueue)
+                        .build())
+                .visibilityTimeout(
+                        Duration.seconds(instanceProperties.getInt(COMPACTION_JOB_CREATION_LAMBDA_TIMEOUT_IN_SECONDS)))
+                .build();
+        instanceProperties.set(COMPACTION_JOB_CREATION_BATCH_QUEUE_URL, queue.getQueueUrl());
+        instanceProperties.set(COMPACTION_JOB_CREATION_BATCH_QUEUE_ARN, queue.getQueueArn());
+        instanceProperties.set(COMPACTION_JOB_CREATION_BATCH_DLQ_URL, deadLetterQueue.getQueueUrl());
+        instanceProperties.set(COMPACTION_JOB_CREATION_BATCH_DLQ_ARN, deadLetterQueue.getQueueArn());
+
+        return queue;
+    }
+
+    private void ecsClusterForCompactionTasks(
+            CoreStacks coreStacks, IBucket jarsBucket, LambdaCode taskCreatorJar, Queue compactionJobsQueue) {
         VpcLookupOptions vpcLookupOptions = VpcLookupOptions.builder()
                 .vpcId(instanceProperties.get(VPC_ID))
                 .build();
@@ -356,8 +402,8 @@ public class CompactionStack extends NestedStack {
     }
 
     @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
-    private void addEC2CapacityProvider(Cluster cluster, IVpc vpc,
-                                        CoreStacks coreStacks, LambdaCode taskCreatorJar) {
+    private void addEC2CapacityProvider(
+            Cluster cluster, IVpc vpc, CoreStacks coreStacks, LambdaCode taskCreatorJar) {
 
         // Create some extra user data to enable ECS container metadata file
         UserData customUserData = UserData.forLinux();
@@ -466,8 +512,8 @@ public class CompactionStack extends NestedStack {
                 .build();
     }
 
-    private ContainerDefinitionOptions createFargateContainerDefinition(ContainerImage image,
-                                                                        Map<String, String> environment, InstanceProperties instanceProperties) {
+    private ContainerDefinitionOptions createFargateContainerDefinition(
+            ContainerImage image, Map<String, String> environment, InstanceProperties instanceProperties) {
         String architecture = instanceProperties.get(COMPACTION_TASK_CPU_ARCHITECTURE).toUpperCase(Locale.ROOT);
         String launchType = instanceProperties.get(COMPACTION_ECS_LAUNCHTYPE);
         Pair<Integer, Integer> requirements = Requirements.getArchRequirements(architecture, launchType,
@@ -481,8 +527,8 @@ public class CompactionStack extends NestedStack {
                 .build();
     }
 
-    private ContainerDefinitionOptions createEC2ContainerDefinition(ContainerImage image,
-                                                                    Map<String, String> environment, InstanceProperties instanceProperties) {
+    private ContainerDefinitionOptions createEC2ContainerDefinition(
+            ContainerImage image, Map<String, String> environment, InstanceProperties instanceProperties) {
         String architecture = instanceProperties.get(COMPACTION_TASK_CPU_ARCHITECTURE).toUpperCase(Locale.ROOT);
         String launchType = instanceProperties.get(COMPACTION_ECS_LAUNCHTYPE);
         Pair<Integer, Integer> requirements = Requirements.getArchRequirements(architecture, launchType,
@@ -532,9 +578,8 @@ public class CompactionStack extends NestedStack {
     }
 
     @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
-    private void lambdaToCreateCompactionTasks(CoreStacks coreStacks,
-                                               LambdaCode taskCreatorJar,
-                                               Queue compactionJobsQueue) {
+    private void lambdaToCreateCompactionTasks(
+            CoreStacks coreStacks, LambdaCode taskCreatorJar, Queue compactionJobsQueue) {
         String functionName = Utils.truncateTo64Characters(String.join("-", "sleeper",
                 instanceProperties.get(ID).toLowerCase(Locale.ROOT), "compaction-tasks-creator"));
 
